--- a/pom.xml
+++ b/pom.xml
@@ -140,9 +140,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-    </dependencies>
 
-
+        <!-- asws s3 연동 -->
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-starter-aws</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+</dependencies>
     <build>
         <plugins>
             <plugin>
@@ -151,5 +156,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
