--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
             <artifactId>spring-cloud-starter-aws</artifactId>
             <version>2.3.1</version>
         </dependency>
+
+        <!-- gson, json -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 </dependencies>
     <build>
         <plugins>
