--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,15 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-</dependencies>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
