--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: fairytaler-backend Server CI/CD
 
-on:
-  pull_request:
-    branches: [main]
+on: 
+  push:
+    branches: [ main ]
+
+  workflow_dispatch:
 
 env:
   # Java
