--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,8 @@ env:
   DOCKER_HUB_USERNAME: jihi1013
   # AWS & Elastic Bean Stalk
   AWS_REGION: ap-northeast-2
-  EB_ENVIRONMENT_NAME: Fairytalerback-env
-  EB_APPLICATION_NAME: Fairytaler-back
+  EB_ENVIRONMENT_NAME: Fairytaler-env
+  EB_APPLICATION_NAME: fairytaler
   spring.datasource.url: ${{ secrets.DATASOURCE_URL }} 
   spring.datasource.username: ${{ secrets.DATASOURCE_USERNAME }} 
   spring.datasource.password: ${{ secrets.DATASOURCE_PASSWORD }} 
