--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: fairytaler-backend Server CI/CD
 on:
   pull_request:
     branches: [ main ]
+  push:
+    branches: [ main ]
 
   workflow_dispatch:
 
